# MISW4406-SaludTechAlpes-2025

./: .coveragerc  .gitignore  .gitpod.yml  README.md  bff.Dockerfile  db-docker-compose.yml  docker-compose-3.yml  docker-compose.yml  exportacionsta-requirements.txt  exportacionsta.Dockerfile  notificacion-requirements.txt  notificaciones.Dockerfile  notififaciones-requirements.txt  pyproject.toml  requirements.txt  run.sh  saludtechalpes.Dockerfile  test.http
deployment/: bookie.yaml  k8s-deployment.yaml  pulsar-standalone.yaml  zookeeper_micro.yaml
docker-entrypoint-initdb.d/: init-db.sh
postman_collections/: bff_sta_queries.json
src/bff_sta/: consumidores.py  eventos.py  main.py  utils.py
src/bff_sta/api/v1/: consultas.py  esquemas.py  router.py
src/exportacionsta/api/: __init__.py  exportacion.py
src/exportacionsta/modulos/exportacion/aplicacion/: dto.py  mapeadores.py  servicios.py
src/exportacionsta/modulos/exportacion/dominio/: entidades.py  eventos.py  fabricas.py  objetos_valor.py  repositorios.py
src/exportacionsta/modulos/exportacion/infraestructura/: consumidores.py  (+4 more)
src/exportacionsta/seedwork/aplicacion/: comandos.py  sagas.py
src/exportacionsta/seedwork/dominio/: entidades.py
src/notificaciones/: main.py
src/notificaciones/schema/v1/: eventos.py
src/saludtechalpes/api/: __init__.py  imagenes.py
src/saludtechalpes/seedwork/aplicacion/: dto.py
src/saludtechalpes/seedwork/dominio/: objetos_valor.py  repositorios.py
src/saludtechalpes/seedwork/presentacion/: api.py
src/ui-sta/: index.html
src/ui-sta/static/js/: consumidor.js
(+27 files in other folders)
